[package]
name = "treasury"
version = "0.1.0"
description = "OCCA Treasury — TreasuryAccount, PolicyAccount, OperationsAccount, ProtocolFeeAccount on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
